// Copyright (c) 2018 ContentBox Authors.
// Use of this source code is governed by a MIT-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package corepb;

message BlockHeader {
    int32 version = 1;
    bytes prev_block_hash = 2;
    bytes txs_root = 3;
    int64 time_stamp = 4;
    uint32 magic = 5;
}

message MsgBlock {
    BlockHeader header = 1;
    repeated MsgTx txs = 2;
}

message MsgTx {
    int32 version = 1;
    repeated TxIn vin  = 2;
    repeated TxOut vout  = 3;
    uint32 magic = 4;
    int64 lock_time = 5;
}

message TxIn {
    OutPoint prev_out_point = 1;
    bytes script_sig = 2;
    uint32 sequence = 3;
}

message TxOut {
    int64 value = 1;
    bytes script_pub_key = 2;
}

message OutPoint {
    bytes hash = 1;
    uint32 index =2;
}

message UtxoWrap {
    int64 value = 1;
	bytes script_pubKey = 2;
	int32 blockHeight = 3;
	bool is_packed = 4;
	bool is_coinbase = 5;
}